--- a/src/mm1_queue.ipynb
+++ b/src/mm1_queue.ipynb
@@ -92,13 +92,6 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "def average_waiting_time_in_queue():\n",
     "    pass\n",
@@ -109,13 +102,6 @@
     "def utilization():\n",
     "    pass"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
@@ -159,6 +145,21 @@
     "    area_under_Q_t: float\n",
     "    area_under_B_t: float\n",
     "\n",
+    "    def check_arrival(self):\n",
+    "        if self.arriving_queue.queue:\n",
+    "            entity = self.arriving_queue.pop()\n",
+    "            self.waiting_queue.add(entity)\n",
+    "    \n",
+    "    def check_service(self):\n",
+    "        if self.server.entity != None and self.server.entity.remain_time == 0:\n",
+    "            self.finished_queue.add(self.server.entity)\n",
+    "            self.server.entity = None\n",
+    "\n",
+    "        if self.server.entity == None:\n",
+    "            if self.waiting_queue.queue:\n",
+    "                entity = self.waiting_queue.pop()\n",
+    "                self.server.entity = entity\n",
+    "\n",
     "    # def __repr__(self):\n",
     "    #     return f\"Status(\\"
    ]
@@ -169,11 +170,29 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "clock = 0.0\n",
+    "system_status = Status(\n",
+    "    clock = 0.0,\n",
+    "    server = Server(),\n",
+    "    arriving_queue = FIFO_queue(entity_list),\n",
+    "    waiting_queue = FIFO_queue(None),\n",
+    "    finished_queue = FIFO_queue(None),\n",
+    "    B_t = 0.0,\n",
+    "    Q_t = 0.0,\n",
+    "    total_waiting_time_in_queue = 0.0,\n",
+    "    area_under_Q_t = 0.0,\n",
+    "    area_under_B_t = 0.0,\n",
+    ")\n",
     "\n",
-    "while clock < 20.00:\n",
+    "simulation_records = []\n",
+    "\n",
+    "while system_status.clock < 20.00:\n",
+    "    system_status.check_arrival()\n",
+    "    system_status.check_service()\n",
+    "    print(system_status)\n",
+    "    record = SimulationRecord()\n",
+    "    simulation_records.append(record)\n",
     "    \n",
-    "\n"
+    "    system_status.clock += 0.01"
    ]
   }
  ],
