feat: finished e.g. case

--- a/src/mm1_queue.ipynb
+++ b/src/mm1_queue.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 161,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 162,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -134,8 +134,7 @@
     "                #! self.server.entity.service_time -= int(self.unit_in_second * self.second_pre_unit)\n",
     "                #! self.total_waiting_time_in_queue += self.clock - entity.arrival_time\n",
     "                if len(self.total_waiting_time_in_queue) > 0:\n",
-    "                    self.total_waiting_time_in_queue.append((self.clock, self.clock - entity.arrival_time + self.total_waiting_time_in_queue[-1][1] + 1)) #! Check this\n",
-    "                \n",
+    "                    self.total_waiting_time_in_queue.append((self.clock, self.clock - entity.arrival_time + self.total_waiting_time_in_queue[-1][1])) #! Check this\n",
     "                else:\n",
     "                    self.total_waiting_time_in_queue.append((self.clock, self.clock - entity.arrival_time))\n",
     "                logger.info(f\"[server]: ADD {self.server.entity}, clock {self.clock}\")\n",
@@ -186,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 142,
+   "execution_count": 163,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -204,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": 164,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -226,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": 165,
    "metadata": {},
    "outputs": [
     {
@@ -249,7 +248,7 @@
        "==========="
       ]
      },
-     "execution_count": 144,
+     "execution_count": 165,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -260,7 +259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 145,
+   "execution_count": 166,
    "metadata": {},
    "outputs": [
     {
@@ -310,7 +309,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": 167,
    "metadata": {},
    "outputs": [
     {
@@ -340,7 +339,7 @@
       "\n",
       "num_completed_waiting: 2\n",
       "\n",
-      "total_waiting_time_in_queue: [(0, 0), (290, 118)]\n",
+      "total_waiting_time_in_queue: [(0, 0), (290, 117)]\n",
       "===========\n",
       "\n"
      ]
@@ -356,7 +355,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 147,
+   "execution_count": 168,
    "metadata": {},
    "outputs": [
     {
@@ -385,7 +384,7 @@
       "\n",
       "num_completed_waiting: 2\n",
       "\n",
-      "total_waiting_time_in_queue: [(0, 0), (290, 118)]\n",
+      "total_waiting_time_in_queue: [(0, 0), (290, 117)]\n",
       "===========\n",
       "\n"
      ]
@@ -401,7 +400,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 148,
+   "execution_count": 169,
    "metadata": {},
    "outputs": [
     {
@@ -430,7 +429,7 @@
       "\n",
       "num_completed_waiting: 2\n",
       "\n",
-      "total_waiting_time_in_queue: [(0, 0), (290, 118)]\n",
+      "total_waiting_time_in_queue: [(0, 0), (290, 117)]\n",
       "===========\n",
       "\n"
      ]
@@ -446,7 +445,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 149,
+   "execution_count": 170,
    "metadata": {},
    "outputs": [
     {
@@ -475,7 +474,7 @@
       "\n",
       "num_completed_waiting: 2\n",
       "\n",
-      "total_waiting_time_in_queue: [(0, 0), (290, 118)]\n",
+      "total_waiting_time_in_queue: [(0, 0), (290, 117)]\n",
       "===========\n",
       "\n"
      ]
@@ -491,7 +490,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 150,
+   "execution_count": 171,
    "metadata": {},
    "outputs": [
     {
@@ -521,7 +520,7 @@
       "\n",
       "num_completed_waiting: 3\n",
       "\n",
-      "total_waiting_time_in_queue: [(0, 0), (290, 118), (466, 277)]\n",
+      "total_waiting_time_in_queue: [(0, 0), (290, 117), (466, 275)]\n",
       "===========\n",
       "\n"
      ]
@@ -537,7 +536,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 151,
+   "execution_count": 172,
    "metadata": {},
    "outputs": [
     {
@@ -567,7 +566,7 @@
       "\n",
       "num_completed_waiting: 4\n",
       "\n",
-      "total_waiting_time_in_queue: [(0, 0), (290, 118), (466, 277), (805, 704)]\n",
+      "total_waiting_time_in_queue: [(0, 0), (290, 117), (466, 275), (805, 701)]\n",
       "===========\n",
       "\n"
      ]
@@ -583,7 +582,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 152,
+   "execution_count": 173,
    "metadata": {},
    "outputs": [
     {
@@ -613,7 +612,7 @@
       "\n",
       "num_completed_waiting: 5\n",
       "\n",
-      "total_waiting_time_in_queue: [(0, 0), (290, 118), (466, 277), (805, 704), (1257, 1521)]\n",
+      "total_waiting_time_in_queue: [(0, 0), (290, 117), (466, 275), (805, 701), (1257, 1517)]\n",
       "===========\n",
       "\n"
      ]
@@ -629,7 +628,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 153,
+   "execution_count": 174,
    "metadata": {},
    "outputs": [
     {
@@ -657,7 +656,7 @@
       "\n",
       "num_completed_waiting: 5\n",
       "\n",
-      "total_waiting_time_in_queue: [(0, 0), (290, 118), (466, 277), (805, 704), (1257, 1521)]\n",
+      "total_waiting_time_in_queue: [(0, 0), (290, 117), (466, 275), (805, 701), (1257, 1517)]\n",
       "===========\n",
       "\n"
      ]
@@ -673,7 +672,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 154,
+   "execution_count": 175,
    "metadata": {},
    "outputs": [
     {
@@ -704,7 +703,7 @@
       "\n",
       "num_completed_waiting: 6\n",
       "\n",
-      "total_waiting_time_in_queue: [(0, 0), (290, 118), (466, 277), (805, 704), (1257, 1521), (1869, 1522)]\n",
+      "total_waiting_time_in_queue: [(0, 0), (290, 117), (466, 275), (805, 701), (1257, 1517), (1869, 1517)]\n",
       "===========\n",
       "\n"
      ]
@@ -720,7 +719,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 155,
+   "execution_count": 176,
    "metadata": {},
    "outputs": [
     {
@@ -749,7 +748,7 @@
       "\n",
       "num_completed_waiting: 6\n",
       "\n",
-      "total_waiting_time_in_queue: [(0, 0), (290, 118), (466, 277), (805, 704), (1257, 1521), (1869, 1522)]\n",
+      "total_waiting_time_in_queue: [(0, 0), (290, 117), (466, 275), (805, 701), (1257, 1517), (1869, 1517)]\n",
       "===========\n",
       "\n"
      ]
@@ -765,7 +764,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 156,
+   "execution_count": 177,
    "metadata": {},
    "outputs": [
     {
@@ -785,7 +784,7 @@
       "\n",
       "num_completed_waiting: 6\n",
       "\n",
-      "total_waiting_time_in_queue: [(0, 0), (290, 118), (466, 277), (805, 704), (1257, 1521), (1869, 1522)]\n",
+      "total_waiting_time_in_queue: [(0, 0), (290, 117), (466, 275), (805, 701), (1257, 1517), (1869, 1517)]\n",
       "===========\n",
       "\n"
      ]
@@ -801,7 +800,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 157,
+   "execution_count": 178,
    "metadata": {},
    "outputs": [
     {
@@ -817,7 +816,7 @@
        "0.917"
       ]
      },
-     "execution_count": 157,
+     "execution_count": 178,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -828,14 +827,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 158,
+   "execution_count": 179,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "average waiting time in queue 2.5366666666666666\n",
+      "average waiting time in queue 2.5283333333333333\n",
       "area under Q_t: 1578\n",
       "time average number in queue 0.789\n"
      ]
@@ -850,38 +849,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 160,
+   "execution_count": 180,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[(0, 0), (290, 118), (466, 277), (805, 704), (1257, 1521), (1869, 1522)]"
+       "[(0, 0), (290, 117), (466, 275), (805, 701), (1257, 1517), (1869, 1517)]"
       ]
      },
-     "execution_count": 160,
+     "execution_count": 180,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "system_status.total_waiting_time_in_queue"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 159,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# def average_waiting_time_in_queue(self):\n",
-    "#     return (self.total_waiting_time_in_queue / self.num_completed_waiting) * self.unit_in_second\n",
-    "\n",
-    "# def time_average_number_in_queue(self):\n",
-    "#     return self.area_under_Q_t / (self.clock - 1)\n",
-    "\n",
-    "# def utilization(self):\n",
-    "#     return self.area_under_B_t / (self.clock - 1)"
    ]
   },
   {
