--- a/src/mm1_queue.ipynb
+++ b/src/mm1_queue.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 157,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 158,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -177,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 159,
    "metadata": {},
    "outputs": [
     {
@@ -315,7 +315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 160,
    "metadata": {},
    "outputs": [
     {
@@ -444,16 +444,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 161,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.patches.StepPatch at 0x12eb5e8c0>"
+       "[(0, 0), (290, 117), (466, 275), (805, 701), (1257, 1517), (1869, 1517)]"
       ]
      },
-     "execution_count": 134,
+     "execution_count": 161,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "system_status.total_waiting_time_in_queue"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 162,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "l = [system_status.B_t, system_status.Q_t, system_status.total_waiting_time_in_queue, system_status2.B_t, system_status2.Q_t, system_status2.total_waiting_time_in_queue]\n",
+    "dir_path = \"./mm1_data\"\n",
+    "file_name_list = [\"B_t\", \"Q_t\", \"total_waiting_time_in_queue\", \"B_t_down\", \"Q_t_down\", \"total_waiting_time_in_queue_down\"] \n",
+    "\n",
+    "for i, file_name in zip(l, file_name_list):\n",
+    "    df = pd.DataFrame(i, columns=[\"clock\", \"value\"])\n",
+    "    df.to_csv(f\"{dir_path}/{file_name}.csv\", index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 163,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<matplotlib.patches.StepPatch at 0x1310332e0>"
+      ]
+     },
+     "execution_count": 163,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -477,16 +514,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 164,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.patches.StepPatch at 0x12ebf9510>"
+       "<matplotlib.patches.StepPatch at 0x131164bb0>"
       ]
      },
-     "execution_count": 135,
+     "execution_count": 164,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -509,16 +546,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 165,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.patches.StepPatch at 0x12ec47790>"
+       "<matplotlib.patches.StepPatch at 0x1311c8130>"
       ]
      },
-     "execution_count": 136,
+     "execution_count": 165,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -541,16 +578,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 166,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.patches.StepPatch at 0x12ecdb9a0>"
+       "<matplotlib.patches.StepPatch at 0x13122a260>"
       ]
      },
-     "execution_count": 137,
+     "execution_count": 166,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -573,7 +610,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 167,
    "metadata": {},
    "outputs": [],
    "source": [
